# RaceForNetology

./: CMakeLists.txt  Camel.cpp  Camel.h  Eagle.cpp  Eagle.h  GoEverywhereBoots.cpp  GoEverywhereBoots.h  KoverSamolet.cpp  KoverSamolet.h  Metla.cpp  Metla.h  MyExceptions.h  airtransport.cpp  airtransport.h  course.cpp  fastCamel.cpp  fastCamel.h  groundtransport.h  kentavr.cpp  kentavr.h  race.cpp  race.h  transport.cpp  transport.h
